maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:58: error: type mismatch;
 found   : Boolean
 required: Int
    if (sol>=Abso(sol-getIndication(x-1,y)) && Abso(sol-getIndication(x-1,y)>=2)){
                                                                            ^